# rust-axum-db

./: CURL.md  Cargo.toml  DEV.md
.devcontainer/: .devcontainer.json
Docker/mariadb/: init.sql
src/: handler.rs  jwt.rs  main.rs
